# freeeditor

./: .gitmodules  README.md
project/ANDROID/: freeeditor.jks
project/ANDROID/app/: build.gradle
project/ANDROID/app/release/: app.aab
project/ANDROID/gradle/wrapper/: gradle-wrapper.properties
project/ANDROID/sdk/: build.gradle  proguard-rules.pro
src/: CMakeLists.txt
src/framework/base/: AutoLock.h  DataFrame.h  DataStream.cpp  DataStream.h  DeviceContext.cpp  DeviceContext.h  IMsgListener.h  MediaChain.cpp  MediaChain.h  MediaChainImpl.cpp  MediaChainImpl.h  MediaModule.cpp  MediaModule.h  MediaProcessor.cpp  MediaProcessor.h  MessageChain.cpp  MessageChain.h  MessageChainImpl.cpp  MessageChainImpl.h  MessageContext.cpp  MessageContext.h  MessageProcessor.cpp  MessageProcessor.h  MsgKey.h  StreamProcessor.h  bitstream.cpp  bitstream.h
src/framework/context/: AVFramePool.c  AVFramePool.h  BufferPool.cpp  BufferPool.h  EnvContext.cpp  EnvContext.h  MConfig.cpp  MConfig.h  MContext.cpp  MContext.h  MediaBufferPool.cpp  MediaBufferPool.h  MediaConfig.cpp  MediaConfig.h  MediaContext.cpp  MediaContext.h  MessagePool.cpp  MessagePool.h  SmartPtr.cpp  SmartPtr.h  SrBufferPool.cpp  SrBufferPool.h  SrMessageQueue.cpp  SrMessageQueue.h  sr_buffer_frame.c  sr_buffer_frame.h  sr_buffer_pool.c  sr_buffer_pool.h  video_resample.c  video_resample.h
src/framework/device/: AudioEncoder.cpp  AudioEncoder.h  AudioSource.cpp  AudioSource.h  Encoder.h  FaacAudioEncoder.cpp  FaacAudioEncoder.h  FdkaacEncoder.cpp  FdkaacEncoder.h  MediaFile.cpp  MediaFile.h  MediaProtocol.cpp  MediaProtocol.h  MyVideoRenderer.cpp  MyVideoRenderer.h  MyVideoSource.cpp  MyVideoSource.h  MyVideoWindow.cpp  MyVideoWindow.h  NativeWindow.cpp  NativeWindow.h  OpenGLESRender.cpp  OpenGLESRender.h  VideoEncoder.cpp  VideoEncoder.h  VideoRenderer.cpp  VideoRenderer.h  VideoSource.cpp  VideoSource.h  VideoWindow.cpp  VideoWindow.h  X264Encoder.cpp  X264Encoder.h  X264VideoEncoder.cpp  X264VideoEncoder.h
src/framework/device/android/: AndroidCamera.cpp  AndroidCamera.h  AndroidDevice.cpp  AndroidDevice.h  AndroidWindow.cpp  AndroidWindow.h  Camera.cpp  Camera.h  MediaContext.cpp  MediaContext.h  MediaPlayer.cpp  MediaPlayer.h  MediaRecord.cpp  MediaRecord.h  MediaRecorder.cpp  MediaRecorder.h  Microphone.cpp  Microphone.h  Speaker.cpp  Speaker.h  Window.cpp  Window.h
src/framework/editor/: Editor.cpp  Editor.h  StreamCapture.cpp  StreamCapture.h  StreamEditor.cpp  StreamEditor.h
src/framework/jni/: Device_Bridge.h  GLRenderer.c  GLRenderer.h  JNIContext.cpp  JNIContext.h  JNIHandler.cpp  JNI_Bridge.cpp  SDKJNI.cpp  SDKJNI.cppbk  SDKJNI.h  SDKJNI.hbk  javap.sh  opengles.c  opengles.h
src/framework/media/: AudioDecoder.cpp  AudioDecoder.h  AudioEncoder.cpp  AudioEncoder.h  AudioFilter.cpp  AudioFilter.h  AudioMixer.cpp  AudioMixer.h  AudioPlayer.cpp  AudioPlayer.h  AudioSource.cpp  AudioSource.h  FFmpegAudioDecoder.cpp  FFmpegAudioDecoder.h  FFmpegMediaSource.cpp  FFmpegMediaSource.h  FFmpegMediaStream.cpp  FFmpegMediaStream.h  FFmpegVideoDecoder.cpp  FFmpegVideoDecoder.h  FileMediaStream.cpp  FileMediaStream.h  MediaPlugin.cpp  MediaPlugin.h  MediaSource.cpp  MediaSource.h  MediaStream.cpp  MediaStream.h  VideoDecoder.cpp  VideoDecoder.h  VideoEncoder.cpp  VideoEncoder.h  VideoFilter.cpp  VideoFilter.h  VideoRenderer.cpp  VideoRenderer.h  VideoSource.cpp  VideoSource.h  VideoTimeCorrection.cpp  VideoTimeCorrection.h  (+7 more)
src/framework/media/encoder/: FaacAudioEncoder.cpp  FaacAudioEncoder.h  X264VideoEncoder.cpp  X264VideoEncoder.h
src/framework/media/ffmpeg/: FFmpegAudioDecoder.cpp  FFmpegAudioDecoder.h  FFmpegMediaSource.cpp  FFmpegMediaSource.h  FFmpegMediaStream.cpp  FFmpegMediaStream.h  FFmpegVideoDecoder.cpp  FFmpegVideoDecoder.h
src/framework/media/resampler/: libyuv_resampler.c  libyuv_resampler.h
src/framework/message/: MessageChain.h  MessageContext.h  MessagePool.h  MessageProcessor.cpp  MessageProcessor.h
src/framework/opengles/: EGL.cpp  EGL.h  GLObject.cpp  GLObject.h  GLShape.cpp  GLShape.h  VideoRenderer.cpp  VideoRenderer.h  opengles.c  opengles.h
src/framework/opengles/android/: AndroidEGL.cpp  AndroidEGL.h
src/framework/opengles/globjects/: GLVideoObject.cpp  GLVideoObject.h  YV21Object.cpp  YV21Object.h
src/framework/opengles/glshapes/: GLPlaneShape.cpp  GLPlaneShape.h
src/framework/player/: Player.cpp  Player.h
src/framework/program/: MediaPlayer.cpp  MediaPlayer.h  MediaRecorder.cpp  MediaRecorder.h
src/framework/recorder/: Recorder.cpp  Recorder.h
src/nlohmann/: json.hpp
src/sr_malloc/include/: Makefile.in  sr_library.h  sr_malloc.h
src/sr_malloc/src/: Makefile.in  sr_backtrace.c  sr_library.c  sr_malloc.c
thirdpart/android/CompileProject/: settings.gradle
thirdpart/android/CompileProject/app/: build.gradle
thirdpart/android/CompileProject/libsamplerate/: CMakeLists.txt  build.gradle
thirdpart/android/CompileProject/libsamplerate/src/androidTest/java/cn/selfreliance/libsamplerate/: ExampleInstrumentedTest.java
thirdpart/android/CompileProject/libsamplerate/src/main/: AndroidManifest.xml
thirdpart/android/CompileProject/libsamplerate/src/main/jni/: samplerate.c
thirdpart/android/CompileProject/libsamplerate/src/test/java/cn/selfreliance/libsamplerate/: ExampleUnitTest.java
thirdpart/android/CompileProject/libyuv/: build.gradle
thirdpart/android/libs/arm64-v8a/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  android_gradle_build.json  android_gradle_build_mini.json  android_gradle_build_yuv_shared_arm64-v8a.command.txt  android_gradle_build_yuv_shared_arm64-v8a.stdout.txt  android_gradle_build_yuvconvert_arm64-v8a.command.txt  android_gradle_generate_cmake_ninja_json_arm64-v8a.stdout.txt  build.ninja  cmake_build_command.txt  cmake_install.cmake  rules.ninja  yuvconvert
thirdpart/android/libs/armeabi-v7a/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  build.ninja  (+13 more)
thirdpart/src/: project.list
thirdpart/src/libsamplerate-0.1.9/: Makefile  Makefile.in  aclocal.m4  config.status  libtool
(+129 files in other folders)
